name:                hlibsass
version:             0.1.0.0
synopsis:            Low-level bindings to libsass
license:             MIT
license-file:        LICENSE
author:              Jakub Fijałkowski
maintainer:          fiolek94@gmail.com
-- copyright:           
category:            Foreign
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
  libsass/*.h
  libsass/*.hpp
  libsass/b64/*.h
  libsass/posix/*.h
  libsass/utf8/*.h
  libsass/Makefile
  libsass/LICENSE

library
  exposed-modules:
    Binding.Sass
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      .
  default-language:    Haskell2010
  default-extensions:  ForeignFunctionInterface
  extra-libraries:     sass
  ghc-options:         -pgml g++